--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ Relazione.lyx~
 Relazione.lyx
 Relazione.lyx~
 fundamentals/cumulative_var.png
+fundamentals/biplot.png
+fundamentals/cm of linear.png
+fundamentals/cm of poly.png
+fundamentals/cm of rbf.png
+fundamentals/region of linear.png
+fundamentals/region of poly.png
+fundamentals/region of rbf.png
+Relazione.lyx~
